<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fadergs.projeto.ipesq.MainActivity">

    <EditText
        android:id="@+id/User_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:hint="@string/enter_user"
        android:inputType="text"
        android:maxLength="18"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIpesq" />

    <EditText
        android:id="@+id/Pass_Word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_pass"
        android:maxLength="12"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_Name"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Log_In"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/text_login"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pass_Word" />

    <TextView
        android:id="@+id/buttonClickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtButtonRegister"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Log_In"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/Log_In"
        app:layout_constraintTop_toBottomOf="@+id/Log_In"
        app:layout_constraintVertical_bias="0.161" />

    <ImageView
        android:id="@+id/logoIpesq"
        android:layout_width="393dp"
        android:layout_height="230dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/logoIpesq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ipesqlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>